--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,8 @@
 .App {
   text-align: center;
   display: flex;
+  justify-content: center;
+  background-color: gray;
+  flex-direction: column;
+  align-items: center;
 }
